# smash

./: Cargo.toml  README.md
src/: main.rs  opts.rs
