[package]
name = "smash"
version = "0.1.0"
edition = "2021"
authors = ["Garren Smith <garren@redcometlabs.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3.4"
hyper = { version = "0.14.16", features = ["full"]}
tokio = { version = "1.15.0", features = ["full"] }
serde_json = "1.0"
clap = { version = "3.0.10", features = ["derive"] }